<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <com.mythawk.yixing.widget.CnToolbar
        android:id="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/login_login"
        app:navigationIcon="@mipmap/icon_back_button"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_view_block"
        android:padding="@dimen/largePadding">


        <com.mythawk.yixing.widget.ClearEditText
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon_telphone_32"
            android:drawablePadding="20dp"
            android:hint="@string/login_phone"
            style="@style/editText_base"
            android:inputType="phone"
            />

        <View
            style="@style/line_vertical"/>


        <com.mythawk.yixing.widget.ClearEditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon_lock"
            android:drawablePadding="20dp"
            android:hint="@string/login_pwd"
            style="@style/editText_base"
            android:inputType="textPassword"
            />

        <LinearLayout
            android:id="@+id/registered_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/registered_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:hint="@string/login_registered"
                style="@style/editText_base"
                />

            <Button
                android:id="@+id/registered_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/login_send"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/bigRedButton"
        android:text="@string/login_logins"
        android:layout_marginTop="30dp"
        android:layout_margin="20dp"
        />


    <LinearLayout
        android:id="@+id/login_registered_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="@dimen/largePadding"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/txt_toReg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_registered_button"
            android:layout_weight="1"
            android:textColor="@color/blue"
            android:textSize="12sp"


            />

        <TextView
            android:id="@+id/txt_toFog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_button"
            android:layout_weight="1"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:gravity="end"

            />

    </LinearLayout>
</LinearLayout>