<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <com.mythawk.yixing.widget.CnToolbar
        android:id="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        >

    </com.mythawk.yixing.widget.CnToolbar>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="5dp"
        >

        <TextView
            android:id="@+id/txt_all"
            style="@style/myOrderDText"
            android:text="@string/myOrder_add"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            />

        <View
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            style="@style/line_horizontal"/>

        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/txt_no_pay"
            style="@style/myOrderDText"
            android:text="@string/myOrder_un_pay"
            android:layout_weight="1"
            />

        <View
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            style="@style/line_horizontal"/>

        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/txt_pay"
            style="@style/myOrderDText"
            android:text="@string/myOrder_pay"
            android:layout_weight="1"
            />

        <View
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            style="@style/line_horizontal"/>

        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/txt_get"
            style="@style/myOrderDText"
            android:text="@string/myOrder_get"
            android:layout_weight="1"
            />

        <View
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            style="@style/line_horizontal"/>

        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/txt_result"
            style="@style/myOrderDText"
            android:layout_weight="1"
            android:text="@string/myOrder_result"
            />

    </LinearLayout>

    </HorizontalScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textSize="32sp"
            android:layout_centerHorizontal="true"
            android:text="@string/myOrder_no_data"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_alignTop="@+id/txt_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>

</LinearLayout>